# tCam

./: .gitmodules
DesktopApp/tcam/tcam Libs/: Appearance Pakx64.dll_837339500.bak  Browser Pluginx64.dll_837339515.bak  MBS_Linux_avahi_Plugin_20772.dll_837339484.bak  MBS_Network_DNSService_Plugin_20772.dll_837339531.bak
DesktopApp/tcam/tcam Resources/html/: help.html  help.md
python/: __init__.py  tcam.py
python/examples/: cci_demo.py  streamtest.py
tCam-Mini/firmware/: partitions.csv  sdkconfig
tCam-Mini/firmware/components/cmd/: json_utilities.c
tCam-Mini/firmware/components/sys/: sys_utilities.c  sys_utilities.h  wifi_utilities.c  wifi_utilities.h
tCam-Mini/firmware/components/tflite-lib/: CMakeLists.txt
tCam-Mini/firmware/main/: CMakeLists.txt  lep_task.c  main.c  model_data_v1.cc  model_data_v1.h  tflite_task.cc  tflite_task.h
tCam-Mini/firmware/main/image_utils/: CMakeLists.txt  stb_image_resize.h
tCam-Mini/python/: count.py  data_collection.py  discard.py  display.py  recorded_data.txt  server.py
tCam-Mini/python/dataset/bedroom/Human/: Human_0000.tiff  Human_0000.txt  Human_0001.tiff  Human_0001.txt  Human_0002.tiff  Human_0002.txt  Human_0003.tiff  Human_0003.txt  Human_0004.tiff  Human_0004.txt  Human_0005.tiff  Human_0005.txt  Human_0006.tiff  Human_0006.txt  Human_0007.tiff  Human_0007.txt  Human_0008.tiff  Human_0008.txt  Human_0009.tiff  Human_0009.txt  Human_0010.tiff  (+55 more)
tCam-Mini/python/examples/: disp_spot.py  disp_telemetry.py  dump_hw_image.py  dump_image.py  streamtest_hw.py
tCam-Mini/python/templates/: stream.html
(+326 files in other folders)
